{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 162,
  "lineage": "83b52946-8561-4c76-118f-1b0124577e95",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "myLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/publicIPAddresses/proyecto1-ip-lb"
              }
            ],
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer",
            "location": "eastus",
            "name": "proyecto1-myLoadBalancer",
            "resource_group_name": "ic7602-proyecto1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.publicIPForLoadBalancer",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "myLoadBalancerBackendAddress",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic1/ipConfigurations/main"
            ],
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer/backendAddressPools/proyecto1-myLoadBalancerBackendAddress",
            "loadbalancer_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer",
            "name": "proyecto1-myLoadBalancerBackendAddress"
          },
          "dependencies": [
            "azurerm_lb.myLoadBalancer",
            "azurerm_public_ip.publicIPForLoadBalancer",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/natGateways/nat1",
            "idle_timeout_in_minutes": 10,
            "location": "eastus",
            "name": "nat1",
            "resource_group_name": "ic7602-proyecto1",
            "resource_guid": "c68721c0-6ffe-4e82-b3a7-f61ef66dd9e4",
            "sku_name": "Standard",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/natGateways/nat1|/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/publicIPAddresses/proyecto1-ip",
            "nat_gateway_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/natGateways/nat1",
            "public_ip_address_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/publicIPAddresses/proyecto1-ip"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat1",
            "azurerm_public_ip.nat1",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "subred1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic1",
            "internal_domain_name_suffix": "cv2jysinwjcufgglfklfrys23b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "main",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-33-75-E3",
            "name": "proyecto1-nic1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "ic7602-proyecto1",
            "virtual_machine_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Compute/virtualMachines/proyecto1-vm1"
          },
          "dependencies": [
            "azurerm_public_ip.nat1",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred1",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "subred2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic2",
            "internal_domain_name_suffix": "cv2jysinwjcufgglfklfrys23b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "main",
                "primary": true,
                "private_ip_address": "10.0.4.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred2"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-33-7E-6D",
            "name": "proyecto1-nic2",
            "private_ip_address": "10.0.4.4",
            "private_ip_addresses": [
              "10.0.4.4"
            ],
            "resource_group_name": "ic7602-proyecto1",
            "virtual_machine_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Compute/virtualMachines/proyecto1-vm2"
          },
          "dependencies": [
            "azurerm_public_ip.nat1",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred2",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "subred3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic3",
            "internal_domain_name_suffix": "cv2jysinwjcufgglfklfrys23b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "main",
                "primary": true,
                "private_ip_address": "10.0.8.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred3"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2B-C9-74",
            "name": "proyecto1-nic3",
            "private_ip_address": "10.0.8.4",
            "private_ip_addresses": [
              "10.0.8.4"
            ],
            "resource_group_name": "ic7602-proyecto1",
            "virtual_machine_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Compute/virtualMachines/proyecto1-vm3"
          },
          "dependencies": [
            "azurerm_public_ip.nat1",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred3",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "interfaceBackedLoadBalancer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer/backendAddressPools/proyecto1-myLoadBalancerBackendAddress",
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic1/ipConfigurations/main|/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer/backendAddressPools/proyecto1-myLoadBalancerBackendAddress",
            "ip_configuration_name": "main",
            "network_interface_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic1"
          },
          "dependencies": [
            "azurerm_lb.myLoadBalancer",
            "azurerm_lb_backend_address_pool.myLoadBalancerBackendAddress",
            "azurerm_network_interface.subred1",
            "azurerm_public_ip.nat1",
            "azurerm_public_ip.publicIPForLoadBalancer",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred1",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "interfaceBackedLoadBalancer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer/backendAddressPools/proyecto1-myLoadBalancerBackendAddress",
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic2/ipConfigurations/main|/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer/backendAddressPools/proyecto1-myLoadBalancerBackendAddress",
            "ip_configuration_name": "main",
            "network_interface_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic2"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.myLoadBalancerBackendAddress",
            "azurerm_network_interface.subred2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "interfaceBackedLoadBalancer3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer/backendAddressPools/proyecto1-myLoadBalancerBackendAddress",
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic3/ipConfigurations/main|/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/loadBalancers/proyecto1-myLoadBalancer/backendAddressPools/proyecto1-myLoadBalancerBackendAddress",
            "ip_configuration_name": "main",
            "network_interface_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkInterfaces/proyecto1-nic3"
          },
          "dependencies": [
            "azurerm_lb_backend_address_pool.myLoadBalancerBackendAddress",
            "azurerm_network_interface.subred3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkSecurityGroups/main-sg",
            "location": "eastus",
            "name": "main-sg",
            "resource_group_name": "ic7602-proyecto1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "OutboundUDP",
                "priority": 100,
                "protocol": "Udp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound22",
                "priority": 107,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound22",
                "priority": 106,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound443",
                "priority": 104,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound443",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Inbound80",
                "priority": 105,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound80",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/publicIPAddresses/proyecto1-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.55.104.134",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "proyecto1-ip",
            "resource_group_name": "ic7602-proyecto1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIPForLoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/publicIPAddresses/proyecto1-ip-lb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.55.105.44",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "proyecto1-ip-lb",
            "resource_group_name": "ic7602-proyecto1",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "subred1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/routeTables/subred1-routetable",
            "location": "eastus",
            "name": "subred1-routetable",
            "resource_group_name": "ic7602-proyecto1",
            "route": [
              {
                "address_prefix": "10.0.4.0/22",
                "name": "route-subred2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "None"
              }
            ],
            "subnets": [
              "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subred1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1",
            "name": "subred1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ic7602-proyecto1",
            "virtual_network_name": "proyecto1-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subred2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred2",
            "name": "subred2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ic7602-proyecto1",
            "virtual_network_name": "proyecto1-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subred3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.8.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred3",
            "name": "subred3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ic7602-proyecto1",
            "virtual_network_name": "proyecto1-network"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "subred1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1",
            "nat_gateway_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/natGateways/nat1",
            "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat1",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred1",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "subred2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred2",
            "nat_gateway_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/natGateways/nat1",
            "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred2"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat1",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred2",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "subred3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred3",
            "nat_gateway_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/natGateways/nat1",
            "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred3"
          },
          "dependencies": [
            "azurerm_nat_gateway.nat1",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred3",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subred1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1",
            "network_security_group_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkSecurityGroups/main-sg",
            "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred1",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subred2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred2",
            "network_security_group_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkSecurityGroups/main-sg",
            "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred2"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred2",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subred3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred3",
            "network_security_group_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkSecurityGroups/main-sg",
            "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred3"
          },
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main",
            "azurerm_subnet.subred3",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "subred1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1",
            "route_table_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/routeTables/subred1-routetable",
            "subnet_id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_route_table.subred1",
            "azurerm_subnet.subred1",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/8"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "499c7815-b20d-4245-98cb-2a9658e25ce9",
            "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network",
            "location": "eastus",
            "name": "proyecto1-network",
            "resource_group_name": "ic7602-proyecto1",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/22",
                "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred1",
                "name": "subred1",
                "security_group": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkSecurityGroups/main-sg"
              },
              {
                "address_prefix": "10.0.4.0/22",
                "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred2",
                "name": "subred2",
                "security_group": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkSecurityGroups/main-sg"
              },
              {
                "address_prefix": "10.0.8.0/22",
                "id": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/virtualNetworks/proyecto1-network/subnets/subred3",
                "name": "subred3",
                "security_group": "/subscriptions/59b14251-463b-4516-9fb2-bfbe1c43fb59/resourceGroups/ic7602-proyecto1/providers/Microsoft.Network/networkSecurityGroups/main-sg"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}